--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -25,8 +25,10 @@
     "expo-constants": "~14.4.2",
     "expo-linking": "~5.0.2",
     "expo-router": "2.0.12",
+    "expo-secure-store": "^12.5.0",
     "expo-splash-screen": "~0.22.0",
     "expo-status-bar": "~1.7.1",
+    "expo-web-browser": "^12.5.0",
     "nativewind": "^4.0.13",
     "react": "18.2.0",
     "react-dom": "18.2.0",
