getting all patients from canvas FHIR api. need to fix type errors.

--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -16,6 +16,7 @@
     "@acme/db": "workspace:^0.1.0",
     "@trpc/client": "next",
     "@trpc/server": "next",
+    "@types/fhir": "^0.0.40",
     "superjson": "2.2.0",
     "zod": "^3.22.2"
   },
