--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,8 @@ AUTH_SECRET='supersecret'
 # @see https://next-auth.js.org/providers/discord
 AUTH_DISCORD_ID=''
 AUTH_DISCORD_SECRET=''
+
+# Canvas Medical
+CANVAS_API_CLIENT_ID=''
+CANVAS_API_CLIENT_SECRET=''
+FUMAGE_BASE_URL=''
