--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -12,21 +12,26 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@acme/auth": "workspace:^0.1.0",
-    "@acme/db": "workspace:^0.1.0",
-    "@trpc/client": "next",
-    "@trpc/server": "next",
-    "superjson": "2.2.0",
-    "zod": "^3.22.2"
+    "@acme/auth": "workspace:^",
+    "@acme/db": "workspace:^",
+    "@trpc/client": "^10.43.6",
+    "@trpc/server": "^10.43.6",
+    "openapi-typescript-codegen": "^0.25.0",
+    "superjson": "^2.2.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@acme/eslint-config": "workspace:^0.2.0",
-    "@acme/prettier-config": "workspace:^0.1.0",
-    "@acme/tsconfig": "workspace:^0.1.0",
+    "@acme/eslint-config": "workspace:^",
+    "@acme/prettier-config": "workspace:^",
+    "@acme/tsconfig": "workspace:^",
     "@types/fhir": "^0.0.40",
-    "eslint": "^8.53.0",
+    "eslint": "^8.54.0",
+    "openapi-typescript": "^6.7.1",
+    "openapi-zod-client": "1.13.1",
     "prettier": "^3.1.0",
-    "typescript": "^5.2.2"
+    "ts-to-zod": "^3.4.0",
+    "typed-openapi": "^0.3.0",
+    "typescript": "^5.3.2"
   },
   "eslintConfig": {
     "root": true,
