chore: create msg

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -87,7 +87,8 @@
     "./table": "./src/table.tsx",
     "./tabs": "./src/tabs.tsx",
     "./toaster": "./src/toaster.tsx",
-    "./use-toast": "./src/use-toast.tsx"
+    "./use-toast": "./src/use-toast.tsx",
+    "./textarea": "./src/textarea.tsx"
   },
   "typesVersions": {
     "*": {
