--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -25,6 +25,7 @@
     "@trpc/react-query": "^10.43.6",
     "@trpc/server": "^10.43.6",
     "framer-motion": "^10.16.5",
+    "jotai": "^2.6.0",
     "next": "^14.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
