--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -2,12 +2,13 @@
   "name": "@acme/expo",
   "version": "0.1.0",
   "private": true,
-  "main": "expo-router/entry",
+  "main": "index.js",
   "scripts": {
     "clean": "git clean -xdf .expo .turbo node_modules",
-    "dev": "expo start --ios",
+    "dev": "expo start",
     "dev:android": "expo start --android",
     "dev:ios": "expo start --ios",
+    "tunnel": "expo start --tunnel",
     "lint": "eslint .",
     "format": "prettier --check . --ignore-path ../../.gitignore",
     "typecheck": "tsc --noEmit",
@@ -49,6 +50,7 @@
     "@babel/preset-env": "^7.23.2",
     "@babel/runtime": "^7.23.2",
     "@expo/config-plugins": "^7.2.5",
+    "@expo/ngrok": "^4.1.3",
     "@types/babel__core": "^7.20.4",
     "@types/react": "^18.2.37",
     "eslint": "^8.53.0",
