--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -9,6 +9,7 @@
     "dev:android": "expo start --android",
     "dev:ios": "expo start --ios",
     "tunnel": "expo start --tunnel",
+    "clear": "expo start -c",
     "lint": "eslint .",
     "format": "prettier --check . --ignore-path ../../.gitignore",
     "typecheck": "tsc --noEmit",
@@ -18,10 +19,10 @@
   "dependencies": {
     "@expo/metro-config": "^0.10.7",
     "@shopify/flash-list": "1.4.3",
-    "@tanstack/react-query": "^5.8.1",
-    "@trpc/client": "next",
-    "@trpc/react-query": "next",
-    "@trpc/server": "next",
+    "@tanstack/react-query": "^4.36.1",
+    "@trpc/client": "^10.43.6",
+    "@trpc/react-query": "^10.43.6",
+    "@trpc/server": "^10.43.6",
     "expo": "^49.0.18",
     "expo-constants": "~14.4.2",
     "expo-linking": "~5.0.2",
@@ -30,6 +31,7 @@
     "expo-splash-screen": "~0.22.0",
     "expo-status-bar": "~1.7.1",
     "expo-web-browser": "^12.5.0",
+    "lucide-react-native": "^0.294.0",
     "nativewind": "^4.0.13",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -38,7 +40,8 @@
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.1",
-    "superjson": "2.2.0"
+    "react-native-svg": "^14.1.0",
+    "superjson": "^2.2.1"
   },
   "devDependencies": {
     "@acme/api": "workspace:^0.1.0",
