--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -28,21 +28,23 @@
     "expo-constants": "~14.4.2",
     "expo-linking": "~5.0.2",
     "expo-router": "2.0.12",
-    "expo-secure-store": "^12.5.0",
-    "expo-splash-screen": "~0.22.0",
-    "expo-status-bar": "~1.7.1",
-    "expo-web-browser": "^12.5.0",
+    "expo-secure-store": "^12.3.1",
+    "expo-splash-screen": "~0.20.5",
+    "expo-status-bar": "~1.6.0",
+    "expo-web-browser": "^12.3.2",
     "jotai": "^2.6.0",
     "lucide-react-native": "^0.294.0",
     "nativewind": "^4.0.13",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.7",
+    "react-native": "0.72.6",
+    "react-native-blob-util": "^0.19.6",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-pdf": "^6.7.3",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.1",
-    "react-native-svg": "^14.1.0",
+    "react-native-svg": "^13.9.0",
     "superjson": "^2.2.1"
   },
   "devDependencies": {
