--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@expo/metro-config": "^0.10.7",
+    "@hookform/resolvers": "^3.3.2",
     "@shopify/flash-list": "1.4.3",
     "@tanstack/react-query": "^4.36.1",
     "@trpc/client": "^10.43.6",
@@ -37,6 +38,7 @@
     "nativewind": "^4.0.13",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.48.2",
     "react-native": "0.72.6",
     "react-native-blob-util": "^0.19.6",
     "react-native-gesture-handler": "~2.12.0",
