--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -26,6 +26,7 @@
     "clsx": "^2.0.0",
     "expo": "^49.0.18",
     "expo-constants": "~14.4.2",
+    "expo-dev-client": "~2.4.12",
     "expo-linking": "~5.0.2",
     "expo-router": "2.0.12",
     "expo-secure-store": "^12.3.1",
@@ -56,6 +57,8 @@
     "@babel/core": "^7.23.2",
     "@babel/preset-env": "^7.23.2",
     "@babel/runtime": "^7.23.2",
+    "@config-plugins/react-native-blob-util": "^6.0.0",
+    "@config-plugins/react-native-pdf": "^6.0.0",
     "@expo/config-plugins": "^7.2.5",
     "@expo/ngrok": "^4.1.3",
     "@types/babel__core": "^7.20.4",
