--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -62,6 +62,7 @@
     "@types/react": "^18.2.37",
     "eslint": "^8.53.0",
     "prettier": "^3.1.0",
+    "react-native-gifted-chat": "^2.4.0",
     "tailwindcss": "3.3.5",
     "typescript": "^5.2.2"
   },
