--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -26,7 +26,9 @@
     "@trpc/server": "^10.43.6",
     "clsx": "^2.0.0",
     "expo": "^49.0.18",
+    "expo-checkbox": "~2.4.0",
     "expo-constants": "~14.4.2",
+    "expo-crypto": "~12.4.1",
     "expo-linking": "~5.0.2",
     "expo-router": "2.0.12",
     "expo-secure-store": "^12.3.1",
