--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -44,6 +44,7 @@
     "react-native": "0.72.6",
     "react-native-blob-util": "^0.19.6",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-pdf": "^6.7.3",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
