--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -27,6 +27,7 @@
     "@trpc/server": "^10.43.6",
     "framer-motion": "^10.16.5",
     "jotai": "^2.6.0",
+    "lucide-react": "0.292.0",
     "next": "^14.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
