--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -26,7 +26,10 @@
     "clsx": "^2.0.0",
     "expo": "^49.0.18",
     "expo-constants": "~14.4.2",
+    "expo-image-picker": "^14.5.0",
     "expo-linking": "~5.0.2",
+    "expo-location": "^16.3.0",
+    "expo-permissions": "^14.4.0",
     "expo-router": "2.0.12",
     "expo-secure-store": "^12.3.1",
     "expo-splash-screen": "~0.20.5",
@@ -40,6 +43,7 @@
     "react-native": "0.72.6",
     "react-native-blob-util": "^0.19.6",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-maps": "^1.8.3",
     "react-native-pdf": "^6.7.3",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
