--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -24,6 +24,7 @@
     "@trpc/react-query": "^10.43.6",
     "@trpc/server": "^10.43.6",
     "clsx": "^2.0.0",
+    "date-fns": "^2.30.0",
     "expo": "^49.0.18",
     "expo-constants": "~14.4.2",
     "expo-image-picker": "^14.5.0",
