--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -19,12 +19,15 @@
   "dependencies": {
     "@expo/metro-config": "^0.10.7",
     "@hookform/resolvers": "^3.3.2",
+    "@react-native-community/datetimepicker": "7.2.0",
+    "@react-native-picker/picker": "2.4.10",
     "@shopify/flash-list": "1.4.3",
     "@tanstack/react-query": "^4.36.1",
     "@trpc/client": "^10.43.6",
     "@trpc/react-query": "^10.43.6",
     "@trpc/server": "^10.43.6",
     "clsx": "^2.0.0",
+    "date-fns": "^2.30.0",
     "expo": "^49.0.18",
     "expo-checkbox": "~2.4.0",
     "expo-constants": "~14.4.2",
@@ -34,6 +37,7 @@
     "expo-secure-store": "^12.3.1",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
+    "expo-system-ui": "~2.4.0",
     "expo-web-browser": "^12.3.2",
     "jotai": "^2.6.0",
     "lucide-react-native": "^0.294.0",
@@ -45,7 +49,9 @@
     "react-native-blob-util": "^0.19.6",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-pdf": "^6.7.3",
+    "react-native-picker-select": "^9.0.0",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.1",
