--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -17,6 +17,7 @@
     "ios": "expo run:ios"
   },
   "dependencies": {
+    "@acme/shared": "workspace:^0.1.0",
     "@config-plugins/react-native-blob-util": "^6.0.0",
     "@config-plugins/react-native-pdf": "^6.0.0",
     "@expo/metro-config": "^0.10.7",
@@ -36,6 +37,7 @@
     "expo-crypto": "~12.4.1",
     "expo-dev-client": "~2.4.12",
     "expo-file-system": "~15.4.5",
+    "expo-haptics": "~12.4.0",
     "expo-image-picker": "^14.3.2",
     "expo-linking": "~5.0.2",
     "expo-location": "^16.1.0",
