--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -57,10 +57,12 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.48.2",
     "react-native": "0.72.6",
+    "react-native-autocomplete-dropdown": "^3.1.0",
     "react-native-blob-util": "^0.19.6",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-maps": "1.7.1",
+    "react-native-mmkv": "^2.11.0",
     "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-pdf": "^6.7.3",
     "react-native-picker-select": "^9.0.0",
