--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -22,9 +22,15 @@
     "@config-plugins/react-native-blob-util": "^6.0.0",
     "@config-plugins/react-native-pdf": "^6.0.0",
     "@expo/metro-config": "^0.10.7",
+    "@expo/vector-icons": "^13.0.0",
+    "@gorhom/bottom-sheet": "^4.5.1",
     "@hookform/resolvers": "^3.3.2",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-community/datetimepicker": "7.2.0",
+    "@react-native-community/slider": "4.4.2",
     "@react-native-picker/picker": "2.4.10",
+    "@react-navigation/drawer": "^6.6.6",
+    "@react-navigation/native": "^6.1.9",
     "@shopify/flash-list": "1.4.3",
     "@tanstack/react-query": "^4.36.1",
     "@trpc/client": "^10.43.6",
@@ -34,15 +40,20 @@
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
     "expo": "^49.0.21",
+    "expo-blur": "~12.4.1",
     "expo-checkbox": "~2.4.0",
+    "expo-clipboard": "~4.3.1",
     "expo-constants": "~14.4.2",
     "expo-crypto": "~12.4.1",
     "expo-dev-client": "~2.4.12",
     "expo-file-system": "~15.4.5",
+    "expo-font": "~11.4.0",
     "expo-haptics": "~12.4.0",
     "expo-image-picker": "^14.3.2",
+    "expo-linear-gradient": "~12.3.0",
     "expo-linking": "~5.0.2",
     "expo-location": "^16.1.0",
+    "expo-navigation-bar": "~2.3.0",
     "expo-permissions": "^14.2.1",
     "expo-router": "2.0.12",
     "expo-secure-store": "^12.3.1",
@@ -50,6 +61,7 @@
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "expo-system-ui": "~2.4.0",
+    "expo-updates": "~0.18.18",
     "expo-web-browser": "^12.3.2",
     "jotai": "^2.6.0",
     "lucide-react-native": "^0.294.0",
@@ -71,6 +83,7 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.1",
     "react-native-svg": "^13.9.0",
+    "react-native-toast-message": "^2.2.0",
     "superjson": "^2.2.1"
   },
   "devDependencies": {
