--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -71,6 +71,7 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.1",
     "react-native-svg": "^13.9.0",
+    "react-native-toast-message": "^2.2.0",
     "superjson": "^2.2.1"
   },
   "devDependencies": {
