--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -71,6 +71,7 @@
     "react-hook-form": "^7.48.2",
     "react-native": "0.72.6",
     "react-native-autocomplete-dropdown": "^3.1.0",
+    "react-native-avoid-softinput": "^4.0.2",
     "react-native-blob-util": "^0.19.6",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
