--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -65,6 +65,7 @@
     "expo-web-browser": "^12.3.2",
     "jotai": "^2.6.0",
     "lucide-react-native": "^0.294.0",
+    "moti": "^0.27.2",
     "nativewind": "^4.0.16",
     "react": "18.2.0",
     "react-dom": "18.2.0",
