--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -74,6 +74,7 @@
     "react-native-autocomplete-dropdown": "^3.1.0",
     "react-native-avoid-softinput": "^4.0.2",
     "react-native-blob-util": "^0.19.6",
+    "react-native-calendars": "^1.1303.0",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-maps": "1.7.1",
