squashed android bugs, task bug

--- a/apps/expo/eas.json
+++ b/apps/expo/eas.json
@@ -29,6 +29,12 @@
         "simulator": true
       }
     },
+    "preview2": {
+      "extends": "base",
+      "android": {
+        "buildType": "apk"
+      }
+    },
     "production": {
       "extends": "base"
     }
